tests/semantic_errors/test18_3.tl
require "ifj21"

function main()
    b, a, c = some_func()
end

main()
